# AtlasForge-EveOffline

./: .gitignore  1111.txt  1112.md  1114.txt  2d implementation.txt  ARCHITECTURE.md  ATLAS_INTEGRATION.md  CMakeLists.txt  DEVELOPMENT_ALIGNMENT.md  Dockerfile  Makefile  README.md  SANDBOXING.md  build.bat  build.sh  build_project.bat  build_project.sh  generate_solution.bat  validate_project.sh
.github/workflows/: atlas-ci.yml  cpp-client-ci.yml  cpp-server-ci.yml
archive/: README.md
archive/design_docs/: 2222
atlas_tests/: CMakeLists.txt  main.cpp  test_ai_execution_model.cpp  test_ai_graph_sandbox.cpp  test_ai_inspector.cpp  test_ai_prompt_debug.cpp  test_ai_replication.cpp  test_ai_visualization.cpp  test_behaviorgraph.cpp  test_charactergraph.cpp  test_determinism_validator.cpp  test_ecs_inspector.cpp  test_editor_layout.cpp  test_game_packager_panel.cpp  test_graph_commands.cpp  test_graph_diff.cpp  test_graph_timeline.cpp  test_interaction_debug_panel.cpp  test_llm_cache.cpp  test_llm_context_builder.cpp  test_llm_request_types.cpp  test_llm_response_validator.cpp  test_mod_manifest.cpp  test_mod_overlay.cpp  test_mod_signal_policy.cpp  test_net_inspector.cpp  test_node_editor_model.cpp  test_noise.cpp  test_plugin_permission.cpp  test_plugin_scanner.cpp  test_project.cpp  test_project_picker_panel.cpp  test_rendergraph.cpp  test_replay_capture.cpp  test_replay_diff.cpp  test_shadergraph.cpp  test_soundgraph.cpp  test_strategygraph.cpp  test_voice_command_panel.cpp  test_worldgraph.cpp  (+1 more)
cpp_server/: CMakeLists.txt  test_systems.cpp
cpp_server/include/components/: game_components.h
cpp_server/include/data/: world_persistence.h
cpp_server/include/systems/: background_simulation_system.h  fleet_norm_system.h  galactic_response_system.h  local_reputation_system.h  lod_culling_system.h  npc_archetype_system.h  npc_intent_system.h  operational_wear_system.h  pirate_doctrine_system.h  rumor_propagation_system.h  sector_tension_system.h  star_system_state_system.h  titan_assembly_system.h  trade_flow_system.h
cpp_server/src/data/: world_persistence.cpp
cpp_server/src/systems/: fleet_norm_system.cpp  lod_culling_system.cpp  pirate_doctrine_system.cpp  star_system_state_system.cpp  titan_assembly_system.cpp
docs/: DEVELOPMENT_GUIDANCE.md  DEVELOPMENT_ROADMAP.md  NEXT_TASKS.md
docs/getting-started/: QUICK_START_PHASE3.md
editor/: CMakeLists.txt  main.cpp
editor/panels/: AIInspectorPanel.cpp  AIInspectorPanel.h  AIPromptDebugPanel.cpp  AIPromptDebugPanel.h  ECSInspectorPanel.cpp  ECSInspectorPanel.h  InteractionDebugPanel.cpp  InteractionDebugPanel.h  NetInspectorPanel.cpp  NetInspectorPanel.h  NodeGraphEditorPanel.cpp  NodeGraphEditorPanel.h  ProjectPickerPanel.cpp  ProjectPickerPanel.h  VoiceCommandPanel.cpp  VoiceCommandPanel.h  WorldGraphPanel.cpp  WorldGraphPanel.h
engine/: CMakeLists.txt
engine/ai/: AIExecutionModel.cpp  AIExecutionModel.h  AIGraphSandbox.cpp  AIGraphSandbox.h  AIMemory.cpp  AIMemory.h  AIVisualization.cpp  AIVisualization.h  BehaviorGraph.cpp  BehaviorGraph.h  BehaviorNodes.cpp  BehaviorNodes.h  LLMCache.cpp  LLMCache.h  LLMContextBuilder.cpp  LLMContextBuilder.h  LLMRequestTypes.cpp  LLMRequestTypes.h  LLMResponseValidator.cpp  LLMResponseValidator.h  RelationshipModel.cpp
engine/character/: CharacterNodes.cpp  CharacterNodes.h
engine/command/: GraphCommands.h
engine/conversation/: ConversationGraph.cpp  ConversationGraph.h
engine/flow/: GameFlowGraph.cpp  GameFlowGraph.h
engine/graphvm/: DeterminismValidator.cpp  DeterminismValidator.h  GraphDiff.cpp  GraphDiff.h  GraphTimeline.cpp  GraphTimeline.h  ReplayCapture.cpp  ReplayCapture.h  ReplayDiff.cpp  ReplayDiff.h
engine/net/: AIReplication.cpp  AIReplication.h
engine/nodeeditor/: NodeEditorModel.cpp  NodeEditorModel.h
engine/plugin/: ModManifest.cpp  ModManifest.h  ModOverlay.cpp  ModOverlay.h  ModSignalPolicy.cpp  ModSignalPolicy.h  PluginPermission.cpp  PluginPermission.h  PluginScanner.cpp  PluginScanner.h
engine/project/: ProjectManager.cpp  ProjectManager.h
engine/render/: RenderGraph.cpp  RenderGraph.h  RenderNodes.cpp  RenderNodes.h
engine/rules/: ServerRules.cpp  ServerRules.h
engine/shader/: ShaderGraph.cpp  ShaderGraph.h  ShaderNodes.cpp  ShaderNodes.h
engine/sound/: SoundNodes.cpp
engine/strategygraph/: StrategyGraph.cpp  StrategyNodes.h
engine/ui/: UINodes.cpp  UINodes.h
engine/world/: WorldGraph.cpp  WorldGraph.h  WorldNodes.cpp  WorldNodes.h
projects/: README.md
projects/eveoffline/: README.md  eveoffline.atlas
projects/eveoffline/Tests/: test_project_structure.cpp
projects/eveoffline/ai/: trade.behaviorgraph
projects/eveoffline/data/: manifest.json
runtime/: CMakeLists.txt  main.cpp
schemas/: atlas.project.v1.json
scripts/: build.bat  build.sh  build_project.bat  build_project.sh  build_vs.bat  generate_solution.bat  validate_project.sh
