add_library(AtlasEngine STATIC
    core/Engine.cpp
    core/Logger.cpp
    ecs/ECS.cpp
    graphvm/GraphVM.cpp
    graphvm/GraphCompiler.cpp
    graphvm/GraphSerializer.cpp
    assets/AssetRegistry.cpp
    assets/AssetBinary.cpp
    net/NetContext.cpp
    sim/TickScheduler.cpp
    world/CubeSphereLayout.cpp
    world/VoxelGridLayout.cpp
    world/TerrainMeshGenerator.cpp
    world/NoiseGenerator.cpp
    world/WorldStreamer.cpp
    world/GalaxyGenerator.cpp
    world/WorldGraph.cpp
    world/WorldNodes.cpp
    world/HeightfieldMesher.cpp
    project/ProjectManager.cpp
    command/CommandHistory.cpp
    interaction/Interaction.cpp
    voice/VoiceCommand.cpp
    plugin/PluginSystem.cpp
    strategygraph/StrategyGraph.cpp
    rules/ServerRules.cpp
    conversation/ConversationGraph.cpp
    ai/AISignalRegistry.cpp
    ai/AIMemory.cpp
    ai/RelationshipModel.cpp
    tile/TileGraph.cpp
    tile/TileNodes.cpp
    sound/SoundGraph.cpp
    sound/SoundNodes.cpp
    ai/BehaviorGraph.cpp
    ai/BehaviorNodes.cpp
    character/CharacterGraph.cpp
    character/CharacterNodes.cpp
    animation/AnimationGraph.cpp
    animation/AnimationNodes.cpp
)

target_include_directories(AtlasEngine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
